--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<nav>
 		<ul>
 			<li><a href="">Hjem</a></li>
-			<li><a href="">Prosjekter</a></li>
+			<li><a href="prosjekter.html">Prosjekter</a></li>
 			<li><a href="">Kontakt</a></li>
 		</ul>
 	</nav>
